# data-preprocessing

./: .gitignore  README.md  config.json  plct-ai-data-unifier-config.yaml  pyproject.toml  requirements.txt  run-au.bat
scripts/: __init__.py  cli.py  config.py  filter.py  sources.py  utils.py
scripts/pandoc_filters/: __init__.py  directive_templates.py  filter.py  filter_md.py  filter_rst.py  filter_util.py
