[project]
name = "plct-ai-data-unifier-runner"
version = "0.1.0"
description = "Runner project for PLCT AI Data Unifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "plct-ai-data-unifier",
]

[tool.uv.sources]
plct-ai-data-unifier = { git = "https://github.com/Petlja/PLCT-AI-Data-Unifier" }
